put back in the list of public tags to click on to add

--- a/views/public/css/user-tags.css
+++ b/views/public/css/user-tags.css
@@ -20,7 +20,7 @@ div.user-tags p {
 }
 
 
-div.user-tags-general span.user-tags-tag {
+div.user-tags-general .user-tags-tag {
 	cursor: pointer;
 }
 
